all files created, working on front end ajax

--- a/public/search.html
+++ b/public/search.html
@@ -9,17 +9,17 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/53b96738e1.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/index.css">
-    <title>Welcome to DynoFax</title>
+    <link rel="stylesheet" href="css/search.css">
+    <title>Dinosaur Search</title>
 </head>
 
 <body>
     <div class="text-center">
+        <i class="fas fa-arrow-left" id="arrowicon"></i>
         <img class="logo" src="images/gynofaxlogo.png"></img>
-        <i class="fas fa-search" id="searchicon"></i>
     </div>
     <div class="container">
-        <!-- <div class="row" id="display"></div> -->
+        
     </div>
 
 
