added search a dinosaur pic and searchbar and search btn. made search and arrow icons match the rest of the text font.

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="text-center">
         <img class="logo" src="images/gynofaxlogo.png"></img>
-        <i class="fas fa-search" id="searchicon"></i>
+        <a href="/search"><i class="fas fa-search" id="searchicon"></i></a>
     </div>
     <div class="container">
         <!-- <div class="row" id="display"></div> -->
