--- a/public/search.html
+++ b/public/search.html
@@ -15,16 +15,21 @@
 
 <body>
     <div class="text-center">
-        <i class="fas fa-arrow-left" id="arrowicon"></i>
+        <a href="/"><i class="fas fa-arrow-left" id="arrowicon"></i></a>
         <img class="logo" src="images/gynofaxlogo.png"></img>
     </div>
     <div class="container">
-        
+        <div class="mt-4 text-center">
+            <!-- <label for="dinosearch" id="dino">Search a Dinosaur.</label> -->
+            <img class="dino" src="images/seqrchadino.png"></img>
+            <input type="text" class="form-control" id="dinosearch">
+            <button type="button" class="btn mt-3"><i class="fas fa-search"></i></button>
+        </div>
     </div>
 
 
 
-    <script type="text/javascript" src="/js/index.js"></script>
+    <script type="text/javascript" src="/js/search.js"></script>
 </body>
 
 </html>
