--- a/public/search.html
+++ b/public/search.html
@@ -22,9 +22,10 @@
         <div class="mt-4 text-center">
             <!-- <label for="dinosearch" id="dino">Search a Dinosaur.</label> -->
             <img class="dino" src="images/seqrchadino.png"></img>
-            <input type="text" class="form-control" id="dinosearch">
-            <button type="button" class="btn mt-3"><i class="fas fa-search"></i></button>
+            <input type="text" class="form-control" id="dinosearch" placeholder="Spinosaurus, Triceratops etc.">
+            <button type="button" class="btn mt-3 mb-4"><i id="searchbtn" class="fas fa-search"></i></button>
         </div>
+        <div class="resultsdisplay"></div>
     </div>
 
 
